--- a/Generator.css
+++ b/Generator.css
@@ -21,3 +21,12 @@ h2 {
   border-color: aliceblue;
   font-weight: bold;
 }
+
+@media only screen and (max-device-width: 1000px) {
+  h1 {
+    font-size: small;
+  }
+  h2 {
+    font-size: smaller;
+  }
+}
